<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:gravity="center">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:weightSum="2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:layout_weight="1"
        android:hint="@string/item_name"/>



    <EditText
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/quantity"
        android:text="0"
        android:hint="@string/quantity" />
</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:weightSum="2"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item"
        android:id="@+id/save_button"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" /></LinearLayout>
</LinearLayout>